frontend/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finote-frontend-service
spec:
  type: NodePort
  selector:
    app: finote-frontend
  ports:
    - port: 8082
      targetPort: 8080
      nodePort: 30082
