frontend/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finote-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: finote.rakafitrap.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finote-frontend-service
            port:
              number: 8082
